Sticky Tab Component

--- a/src/app/Elements/Dashboard/bar-nav-profile/bar-nav-profile.component.html
+++ b/src/app/Elements/Dashboard/bar-nav-profile/bar-nav-profile.component.html
@@ -9,7 +9,7 @@
             </span>
         </div>
 
-        <ul id="dropdown-profile" *dropdownMenu class="dropdown-menu menu-profile" aria-labelledby="button-profile">
+        <ul id="dropdown-profile" *dropdownMenu class="dropdown-menu dropdown-menu-end menu-profile" aria-labelledby="button-profile">
             <li><a (click)="clickNavProfile(1)" class="dropdown-item" href="#">{{resourceConfig.Headers.Pofile.MyProfile}}</a></li>
             <li><a (click)="clickNavProfile(2)" class="dropdown-item" href="#">{{resourceConfig.Headers.Pofile.ChangePassword}}</a></li>
             <li><hr class="dropdown-divider"></li>
