--- a/src/app/Containers/master-layout-panel/master-layout-panel.component.html
+++ b/src/app/Containers/master-layout-panel/master-layout-panel.component.html
@@ -1,9 +1,9 @@
 <header>
 
     <app-bar-loading></app-bar-loading>
-    
-    <app-bar-this-side-toggler #barThisSideTogglerComponent [barThisSideOpen]="true" [barThisSideMinimizer]="false" barThisSideSize="md"
-        barThisSideIcon="/assets/icons/app-this-side-btn.svg" barThisSideControl="appBarThisSide"
+
+    <app-bar-this-side-toggler #barThisSideTogglerComponent [barThisSideOpen]="true" [barThisSideMinimizer]="false"
+        barThisSideSize="md" barThisSideIcon="/assets/icons/app-this-side-btn.svg" barThisSideControl="appBarThisSide"
         (barThisSideStatus)="dataStatus($event)"></app-bar-this-side-toggler>
 
     <a class="navbar-brand">
@@ -11,37 +11,37 @@
         <img class="img-logo d-block d-md-none" src="/assets/logo/sygnet.svg">
     </a>
 
-    
 
-    <app-bar-that-side-toggler #barThatSideTogglerComponent [barThatSideOpen]="false" barThatSideSize="lg"
+
+    <!-- <app-bar-that-side-toggler #barThatSideTogglerComponent [barThatSideOpen]="false" barThatSideSize="lg"
         barThatSideIcon="/assets/icons/app-that-side-btn.svg" barThatSideControl="appBarThatSide"
-        (barThatSideStatus)="dataStatus($event)"></app-bar-that-side-toggler>
+        (barThatSideStatus)="dataStatus($event)"></app-bar-that-side-toggler> -->
 
-        <app-bar-nav-profile></app-bar-nav-profile>
+    <app-bar-nav-profile></app-bar-nav-profile>
 
-        <app-bar-color-theme class="d-none d-md-block"></app-bar-color-theme>
-        
+    <app-bar-color-theme class="d-none d-md-block"></app-bar-color-theme>
+
 </header>
 
 <app-bar-this-side id="appBarThisSide" [navbarItems]="navbarItem">
 </app-bar-this-side>
-<app-bar-that-side id="appBarThatSide">
+<!-- <app-bar-that-side id="appBarThatSide">
     <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">
-            <i class="fa fa-sitemap" style="font-size: 1.5rem; padding: .4rem;"></i>
-          </a>
+            <a class="nav-link active" aria-current="page" href="#">
+                <i class="fa fa-sitemap" style="font-size: 1.5rem; padding: .4rem;"></i>
+            </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
-            <i class="fa fa-lock" style="font-size: 1.5rem; padding: .4rem;"></i>
-          </a>
+            <a class="nav-link" href="#">
+                <i class="fa fa-lock" style="font-size: 1.5rem; padding: .4rem;"></i>
+            </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fa fa-user" style="font-size: 1.5rem; padding: .4rem;"></i></a>
+            <a class="nav-link" href="#"><i class="fa fa-user" style="font-size: 1.5rem; padding: .4rem;"></i></a>
         </li>
-      </ul>
-</app-bar-that-side>
+    </ul>
+</app-bar-that-side> -->
 
 <div class="app-body">
     <app-bar-message [hideDelay]="7000"></app-bar-message>
@@ -64,10 +64,21 @@
             </button>
 
         </div><!-- /.container-fluid -->
+
     </main>
 </div>
 
-<footer>
+<app-bar-tab-sticky>
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>3</li>
+        <li>3</li>
+    </ul>
+</app-bar-tab-sticky>
+
+<!-- <footer>
     <span><a href="http://coredesign.ir">AngularDashboard</a> © 2019 creativeLabs.</span>
     <span class="ms-auto">Powered by <a href="http://coredesign.ir">AngularDashboard for Angular</a></span>
-</footer>
+</footer> -->
